frontend/src/styles.css
/* You can add global styles to this file, and also import other style files */
/*COLORES #c62828 #BC8379 #FFF6F3 #798897*/

@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap');

* {
    font-family: 'Libre Baskerville', serif;
    letter-spacing: -0.4px;
}

html {
    background-color: #FFF6F3;
}


/*Estilos para los elementos que genera materialize.js*/
.dropdown-content li>a, .dropdown-content li>span {
    color: #c62828!important;
}

label.active {
    color: #c62828!important;
}

/*Estilos para el grid de la busqueda*/

.grid {
    max-width: 1200px;
}

.grid:after {
    content: '';
    display: block;
    clear: both;
}

.grid-sizer,

.grid-item {
    min-width: 335px;
    max-width: 44%;
    float: left;
    margin: 0 0.5% 0 0.5%;
}

.grid-item a:hover {
    color: #798897;
}

.grid-item--width2 {
    float: right;
    width: 54%;
    min-width: 54%;
    margin: 0 0.2%;
    transition: width 0.4s ease-in-out;
}
.grid-item--width3 { width:  80%; }

.grid-item--height2 { height: 200px; }
.grid-item--height3 { height: 260px; }
.grid-item--height4 { height: 360px; }

@media only screen and (max-width: 600px) {
    .grid-item {
        max-width: 100%;
    }

    .grid-item--width2 {
        width: 100%;
    }
}

